<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/contacts_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:text="@string/interaction_date"
                android:textSize="18dp"/>

            <DatePicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:scaleY="0.8"
                android:scaleX="0.8"
                android:layout_marginBottom="-60dp"
                android:layout_marginTop="-35dp"
                android:id="@+id/date_picker"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:layout_marginLeft="25dp"
                    android:textStyle="bold"
                    android:text="@string/interaction_type"
                    android:textSize="18dp"/>
                <LinearLayout
                    android:layout_width="200dp"
                    android:layout_height="35dp"
                    android:background="@drawable/border"
                    android:layout_marginLeft="15dp">
                    <Spinner
                        android:id="@+id/interaction_type"
                        android:layout_width="200dp"
                        android:layout_height="35dp"
                        android:backgroundTint="@color/colorAccent"
                        android:spinnerMode="dropdown"
                        android:dropDownWidth="200dp"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:layout_marginLeft="25dp"
                    android:textStyle="bold"
                    android:text="@string/interaction_duration"
                    android:textSize="18dp"/>
                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="35dp"
                    android:background="@drawable/border"
                    android:layout_marginLeft="15dp">
                    <Spinner
                        android:id="@+id/interaction_duration"
                        android:layout_width="150dp"
                        android:layout_height="35dp"
                        android:backgroundTint="@color/colorAccent"
                        android:spinnerMode="dropdown"
                        android:dropDownWidth="150dp"/>
                </LinearLayout>
            </LinearLayout>

            <EditText
                android:id="@+id/notes"
                android:layout_gravity="center_horizontal"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/interaction_notes"
                android:layout_marginTop="5dp"/>

            <Button
                android:id="@+id/createInteraction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="bottom|center_horizontal"
                android:text="@string/add_interaction"
                android:textSize="18dp"
                style="@style/Widget.MaterialComponents.Button"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>